Thu Sep  4 14:39:33 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          '-P' isn't a valid option on Ubantu linux (Bug 15051). Replacing
          with Perl alternate.

Wed Sep  3 10:23:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Don't run OBV Typed events with micro and compact configurations

Wed Sep  3 07:31:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added support for ACE_RUN_VX_TGTSRV_WORKINGDIR. Before starting
          the executable we will do a chdir to this directory when it
          is specified

Wed Sep  3 07:10:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bound_Ptr_Test.cpp:
          Don't use ACE_ASSERT, it is disabled in release mode and this test
          had some real functionality placed within an ACE_ASSERT. This fixes
          bugzilla 3415

Tue Sep  2 14:11:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
          Don't use ACE_LIB_TEXT but ACE_TEXT, the former has been deprecated
          a long time ago

Thu Aug 28 21:18:11 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Removed "Exceptions" and "NO_EXCEPTIONS" as -Config options.

Thu Aug 28 18:33:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Improved prompt matching

Thu Aug 28 13:04:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          The error when we can't chdir to a directory was confusing

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm: